k8s/service.yaml
apiVersion: v1
kind: Service
metadata: 
  name: sba-example-service
spec:
  selector:
    app: sba-example
  ports:
    - protocol: "TCP"
      port: 8080
      targetPort: 8080
  type: LoadBalancer
