k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress   
metadata:   
  name: eureka-example-ingress
  annotations:   
    nginx.ingress.kubernetes.io/rewrite-target: /$1   
spec:   
  rules:   
  # host: performance.com   
    - http:   
        paths:   
          - path: /   
            pathType: Prefix   
            backend:   
              service:   
                name: eureka-example-service   
                port:   
                  number: 8080
